--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   "author": "Dimitris Kalafatis, Sean Mahon",
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.7.9",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
